Entregable3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ACTUALIZA
    AGREGA_LA_COLUMNA
    AGRUPANDO_POR
    BORRA_DE_LA
    CAMBIA_LA_TABLA
    CAST
    CLAVE_PRIMA
    CLAVE_REFERENTE
    COMO_MUCHO
    CONTANDO
    CREA_LA_TABLA
    DEFAULT
    DE_LA_TABLA
    DONDE
    DROP_TABLE
    ELIMINA_LA_COLUMNA
    EN
    ENTRE
    EN_ESTO
    ES_NULO
    EXISTE
    EXISTS
    FLOAT
    IN
    IS_NULL
    LIKE
    LIMIT
    LOS_DISTINTOS
    LOS_VALORES
    METE_EN
    MEZCLANDO
    NO_NULO
    ORDENA_POR
    PARECIDO_A
    POR_DEFECTO
    SETEA
    TIRA_LA_TABLA
    TODO
    TRAEME
    TRANSFORMA_A
    UNICO
    WHERE_DEL_GROUP_BY
    Y

Grammar

Rule 0     S' -> statement
Rule 1     statement -> select_statement
Rule 2     statement -> insert_statement
Rule 3     statement -> update_statement
Rule 4     statement -> delete_statement
Rule 5     statement -> alter_table_statement
Rule 6     select_statement -> SELECT opt_distinct select_list FROM table_list opt_join_clause opt_where_clause opt_group_by_clause opt_having_clause opt_order_by_clause PUNTO_Y_COMA
Rule 7     opt_order_by_clause -> ORDER_BY column_list
Rule 8     opt_order_by_clause -> empty
Rule 9     opt_distinct -> DISTINCT
Rule 10    opt_distinct -> empty
Rule 11    select_list -> ASTERISCO
Rule 12    select_list -> select_items
Rule 13    select_items -> select_items COMA select_item
Rule 14    select_items -> select_item
Rule 15    select_item -> DISTINCT identifier
Rule 16    select_item -> identifier
Rule 17    select_item -> function_call
Rule 18    function_call -> COUNT PARENIZQ operand PARENDER
Rule 19    function_call -> SUM PARENIZQ operand PARENDER
Rule 20    function_call -> AVG PARENIZQ operand PARENDER
Rule 21    function_call -> MIN PARENIZQ operand PARENDER
Rule 22    function_call -> MAX PARENIZQ operand PARENDER
Rule 23    column_list -> identifier
Rule 24    column_list -> identifier COMA column_list
Rule 25    table_list -> identifier
Rule 26    table_list -> identifier COMA table_list
Rule 27    opt_join_clause -> JOIN identifier ON condition
Rule 28    opt_join_clause -> empty
Rule 29    opt_where_clause -> WHERE condition
Rule 30    opt_where_clause -> empty
Rule 31    opt_group_by_clause -> GROUP_BY column_list
Rule 32    opt_group_by_clause -> empty
Rule 33    opt_having_clause -> HAVING condition
Rule 34    opt_having_clause -> empty
Rule 35    condition -> expression
Rule 36    condition -> condition AND condition
Rule 37    condition -> condition OR condition
Rule 38    operand -> value
Rule 39    operand -> aggregate_function
Rule 40    value -> NUM
Rule 41    value -> STRING
Rule 42    value -> identifier
Rule 43    value -> ASTERISCO
Rule 44    expression -> operand comparador operand
Rule 45    expression -> operand BETWEEN operand AND operand
Rule 46    aggregate_function -> COUNT PARENIZQ operand PARENDER
Rule 47    aggregate_function -> SUM PARENIZQ operand PARENDER
Rule 48    aggregate_function -> AVG PARENIZQ operand PARENDER
Rule 49    aggregate_function -> MIN PARENIZQ operand PARENDER
Rule 50    aggregate_function -> MAX PARENIZQ operand PARENDER
Rule 51    comparador -> IGUAL
Rule 52    comparador -> MAYOR_QUE
Rule 53    comparador -> MENOR_QUE
Rule 54    comparador -> MAYOR_IGUAL
Rule 55    comparador -> MENOR_IGUAL
Rule 56    comparador -> DIFERENTE
Rule 57    insert_statement -> INSERT_INTO identifier PARENIZQ column_list PARENDER VALUES PARENIZQ value_list PARENDER PUNTO_Y_COMA
Rule 58    value_list -> value
Rule 59    value_list -> value COMA value_list
Rule 60    update_statement -> UPDATE identifier SET assignment_list opt_where_clause PUNTO_Y_COMA
Rule 61    assignment_list -> assignment
Rule 62    assignment_list -> assignment COMA assignment_list
Rule 63    assignment -> identifier IGUAL value
Rule 64    delete_statement -> DELETE_FROM identifier opt_where_clause PUNTO_Y_COMA
Rule 65    alter_table_statement -> ALTER_TABLE identifier ADD_COLUMN column_definition PUNTO_Y_COMA
Rule 66    alter_table_statement -> ALTER_TABLE identifier DROP_COLUMN identifier PUNTO_Y_COMA
Rule 67    create_table_statement -> CREATE_TABLE identifier PARENIZQ column_definition_list PARENDER PUNTO_Y_COMA
Rule 68    column_definition_list -> column_definition
Rule 69    column_definition_list -> column_definition COMA column_definition_list
Rule 70    column_definition -> identifier data_type column_constraints
Rule 71    data_type -> VARCHAR PARENIZQ NUM PARENDER
Rule 72    data_type -> INT
Rule 73    column_constraints -> constraint
Rule 74    column_constraints -> column_constraints constraint
Rule 75    constraint -> NOT_NULL
Rule 76    constraint -> UNIQUE
Rule 77    constraint -> PRIMARY_KEY
Rule 78    constraint -> FOREIGN_KEY
Rule 79    identifier -> ID
Rule 80    identifier -> ID PUNTO ID
Rule 81    empty -> <empty>

Terminals, with rules where they appear

ACTUALIZA            : 
ADD_COLUMN           : 65
AGREGA_LA_COLUMNA    : 
AGRUPANDO_POR        : 
ALTER_TABLE          : 65 66
AND                  : 36 45
ASTERISCO            : 11 43
AVG                  : 20 48
BETWEEN              : 45
BORRA_DE_LA          : 
CAMBIA_LA_TABLA      : 
CAST                 : 
CLAVE_PRIMA          : 
CLAVE_REFERENTE      : 
COMA                 : 13 24 26 59 62 69
COMO_MUCHO           : 
CONTANDO             : 
COUNT                : 18 46
CREATE_TABLE         : 67
CREA_LA_TABLA        : 
DEFAULT              : 
DELETE_FROM          : 64
DE_LA_TABLA          : 
DIFERENTE            : 56
DISTINCT             : 9 15
DONDE                : 
DROP_COLUMN          : 66
DROP_TABLE           : 
ELIMINA_LA_COLUMNA   : 
EN                   : 
ENTRE                : 
EN_ESTO              : 
ES_NULO              : 
EXISTE               : 
EXISTS               : 
FLOAT                : 
FOREIGN_KEY          : 78
FROM                 : 6
GROUP_BY             : 31
HAVING               : 33
ID                   : 79 80 80
IGUAL                : 51 63
IN                   : 
INSERT_INTO          : 57
INT                  : 72
IS_NULL              : 
JOIN                 : 27
LIKE                 : 
LIMIT                : 
LOS_DISTINTOS        : 
LOS_VALORES          : 
MAX                  : 22 50
MAYOR_IGUAL          : 54
MAYOR_QUE            : 52
MENOR_IGUAL          : 55
MENOR_QUE            : 53
METE_EN              : 
MEZCLANDO            : 
MIN                  : 21 49
NOT_NULL             : 75
NO_NULO              : 
NUM                  : 40 71
ON                   : 27
OR                   : 37
ORDENA_POR           : 
ORDER_BY             : 7
PARECIDO_A           : 
PARENDER             : 18 19 20 21 22 46 47 48 49 50 57 57 67 71
PARENIZQ             : 18 19 20 21 22 46 47 48 49 50 57 57 67 71
POR_DEFECTO          : 
PRIMARY_KEY          : 77
PUNTO                : 80
PUNTO_Y_COMA         : 6 57 60 64 65 66 67
SELECT               : 6
SET                  : 60
SETEA                : 
STRING               : 41
SUM                  : 19 47
TIRA_LA_TABLA        : 
TODO                 : 
TRAEME               : 
TRANSFORMA_A         : 
UNICO                : 
UNIQUE               : 76
UPDATE               : 60
VALUES               : 57
VARCHAR              : 71
WHERE                : 29
WHERE_DEL_GROUP_BY   : 
Y                    : 
error                : 

Nonterminals, with rules where they appear

aggregate_function   : 39
alter_table_statement : 5
assignment           : 61 62
assignment_list      : 60 62
column_constraints   : 70 74
column_definition    : 65 68 69
column_definition_list : 67 69
column_list          : 7 24 31 57
comparador           : 44
condition            : 27 29 33 36 36 37 37
constraint           : 73 74
create_table_statement : 
data_type            : 70
delete_statement     : 4
empty                : 8 10 28 30 32 34
expression           : 35
function_call        : 17
identifier           : 15 16 23 24 25 26 27 42 57 60 63 64 65 66 66 67 70
insert_statement     : 2
operand              : 18 19 20 21 22 44 44 45 45 45 46 47 48 49 50
opt_distinct         : 6
opt_group_by_clause  : 6
opt_having_clause    : 6
opt_join_clause      : 6
opt_order_by_clause  : 6
opt_where_clause     : 6 60 64
select_item          : 13 14
select_items         : 12 13
select_list          : 6
select_statement     : 1
statement            : 0
table_list           : 6 26
update_statement     : 3
value                : 38 58 59 63
value_list           : 57 59

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . select_statement
    (2) statement -> . insert_statement
    (3) statement -> . update_statement
    (4) statement -> . delete_statement
    (5) statement -> . alter_table_statement
    (6) select_statement -> . SELECT opt_distinct select_list FROM table_list opt_join_clause opt_where_clause opt_group_by_clause opt_having_clause opt_order_by_clause PUNTO_Y_COMA
    (57) insert_statement -> . INSERT_INTO identifier PARENIZQ column_list PARENDER VALUES PARENIZQ value_list PARENDER PUNTO_Y_COMA
    (60) update_statement -> . UPDATE identifier SET assignment_list opt_where_clause PUNTO_Y_COMA
    (64) delete_statement -> . DELETE_FROM identifier opt_where_clause PUNTO_Y_COMA
    (65) alter_table_statement -> . ALTER_TABLE identifier ADD_COLUMN column_definition PUNTO_Y_COMA
    (66) alter_table_statement -> . ALTER_TABLE identifier DROP_COLUMN identifier PUNTO_Y_COMA

    SELECT          shift and go to state 7
    INSERT_INTO     shift and go to state 8
    UPDATE          shift and go to state 9
    DELETE_FROM     shift and go to state 10
    ALTER_TABLE     shift and go to state 11

    statement                      shift and go to state 1
    select_statement               shift and go to state 2
    insert_statement               shift and go to state 3
    update_statement               shift and go to state 4
    delete_statement               shift and go to state 5
    alter_table_statement          shift and go to state 6

state 1

    (0) S' -> statement .



state 2

    (1) statement -> select_statement .

    $end            reduce using rule 1 (statement -> select_statement .)


state 3

    (2) statement -> insert_statement .

    $end            reduce using rule 2 (statement -> insert_statement .)


state 4

    (3) statement -> update_statement .

    $end            reduce using rule 3 (statement -> update_statement .)


state 5

    (4) statement -> delete_statement .

    $end            reduce using rule 4 (statement -> delete_statement .)


state 6

    (5) statement -> alter_table_statement .

    $end            reduce using rule 5 (statement -> alter_table_statement .)


state 7

    (6) select_statement -> SELECT . opt_distinct select_list FROM table_list opt_join_clause opt_where_clause opt_group_by_clause opt_having_clause opt_order_by_clause PUNTO_Y_COMA
    (9) opt_distinct -> . DISTINCT
    (10) opt_distinct -> . empty
    (81) empty -> .

  ! shift/reduce conflict for DISTINCT resolved as shift
    DISTINCT        shift and go to state 13
    ASTERISCO       reduce using rule 81 (empty -> .)
    ID              reduce using rule 81 (empty -> .)
    COUNT           reduce using rule 81 (empty -> .)
    SUM             reduce using rule 81 (empty -> .)
    AVG             reduce using rule 81 (empty -> .)
    MIN             reduce using rule 81 (empty -> .)
    MAX             reduce using rule 81 (empty -> .)

  ! DISTINCT        [ reduce using rule 81 (empty -> .) ]

    opt_distinct                   shift and go to state 12
    empty                          shift and go to state 14

state 8

    (57) insert_statement -> INSERT_INTO . identifier PARENIZQ column_list PARENDER VALUES PARENIZQ value_list PARENDER PUNTO_Y_COMA
    (79) identifier -> . ID
    (80) identifier -> . ID PUNTO ID

    ID              shift and go to state 16

    identifier                     shift and go to state 15

state 9

    (60) update_statement -> UPDATE . identifier SET assignment_list opt_where_clause PUNTO_Y_COMA
    (79) identifier -> . ID
    (80) identifier -> . ID PUNTO ID

    ID              shift and go to state 16

    identifier                     shift and go to state 17

state 10

    (64) delete_statement -> DELETE_FROM . identifier opt_where_clause PUNTO_Y_COMA
    (79) identifier -> . ID
    (80) identifier -> . ID PUNTO ID

    ID              shift and go to state 16

    identifier                     shift and go to state 18

state 11

    (65) alter_table_statement -> ALTER_TABLE . identifier ADD_COLUMN column_definition PUNTO_Y_COMA
    (66) alter_table_statement -> ALTER_TABLE . identifier DROP_COLUMN identifier PUNTO_Y_COMA
    (79) identifier -> . ID
    (80) identifier -> . ID PUNTO ID

    ID              shift and go to state 16

    identifier                     shift and go to state 19

state 12

    (6) select_statement -> SELECT opt_distinct . select_list FROM table_list opt_join_clause opt_where_clause opt_group_by_clause opt_having_clause opt_order_by_clause PUNTO_Y_COMA
    (11) select_list -> . ASTERISCO
    (12) select_list -> . select_items
    (13) select_items -> . select_items COMA select_item
    (14) select_items -> . select_item
    (15) select_item -> . DISTINCT identifier
    (16) select_item -> . identifier
    (17) select_item -> . function_call
    (79) identifier -> . ID
    (80) identifier -> . ID PUNTO ID
    (18) function_call -> . COUNT PARENIZQ operand PARENDER
    (19) function_call -> . SUM PARENIZQ operand PARENDER
    (20) function_call -> . AVG PARENIZQ operand PARENDER
    (21) function_call -> . MIN PARENIZQ operand PARENDER
    (22) function_call -> . MAX PARENIZQ operand PARENDER

    ASTERISCO       shift and go to state 21
    DISTINCT        shift and go to state 24
    ID              shift and go to state 16
    COUNT           shift and go to state 27
    SUM             shift and go to state 28
    AVG             shift and go to state 29
    MIN             shift and go to state 30
    MAX             shift and go to state 31

    select_list                    shift and go to state 20
    select_items                   shift and go to state 22
    select_item                    shift and go to state 23
    identifier                     shift and go to state 25
    function_call                  shift and go to state 26

state 13

    (9) opt_distinct -> DISTINCT .

    ASTERISCO       reduce using rule 9 (opt_distinct -> DISTINCT .)
    DISTINCT        reduce using rule 9 (opt_distinct -> DISTINCT .)
    ID              reduce using rule 9 (opt_distinct -> DISTINCT .)
    COUNT           reduce using rule 9 (opt_distinct -> DISTINCT .)
    SUM             reduce using rule 9 (opt_distinct -> DISTINCT .)
    AVG             reduce using rule 9 (opt_distinct -> DISTINCT .)
    MIN             reduce using rule 9 (opt_distinct -> DISTINCT .)
    MAX             reduce using rule 9 (opt_distinct -> DISTINCT .)


state 14

    (10) opt_distinct -> empty .

    ASTERISCO       reduce using rule 10 (opt_distinct -> empty .)
    DISTINCT        reduce using rule 10 (opt_distinct -> empty .)
    ID              reduce using rule 10 (opt_distinct -> empty .)
    COUNT           reduce using rule 10 (opt_distinct -> empty .)
    SUM             reduce using rule 10 (opt_distinct -> empty .)
    AVG             reduce using rule 10 (opt_distinct -> empty .)
    MIN             reduce using rule 10 (opt_distinct -> empty .)
    MAX             reduce using rule 10 (opt_distinct -> empty .)


state 15

    (57) insert_statement -> INSERT_INTO identifier . PARENIZQ column_list PARENDER VALUES PARENIZQ value_list PARENDER PUNTO_Y_COMA

    PARENIZQ        shift and go to state 32


state 16

    (79) identifier -> ID .
    (80) identifier -> ID . PUNTO ID

    PARENIZQ        reduce using rule 79 (identifier -> ID .)
    SET             reduce using rule 79 (identifier -> ID .)
    WHERE           reduce using rule 79 (identifier -> ID .)
    PUNTO_Y_COMA    reduce using rule 79 (identifier -> ID .)
    ADD_COLUMN      reduce using rule 79 (identifier -> ID .)
    DROP_COLUMN     reduce using rule 79 (identifier -> ID .)
    COMA            reduce using rule 79 (identifier -> ID .)
    FROM            reduce using rule 79 (identifier -> ID .)
    PARENDER        reduce using rule 79 (identifier -> ID .)
    IGUAL           reduce using rule 79 (identifier -> ID .)
    BETWEEN         reduce using rule 79 (identifier -> ID .)
    MAYOR_QUE       reduce using rule 79 (identifier -> ID .)
    MENOR_QUE       reduce using rule 79 (identifier -> ID .)
    MAYOR_IGUAL     reduce using rule 79 (identifier -> ID .)
    MENOR_IGUAL     reduce using rule 79 (identifier -> ID .)
    DIFERENTE       reduce using rule 79 (identifier -> ID .)
    VARCHAR         reduce using rule 79 (identifier -> ID .)
    INT             reduce using rule 79 (identifier -> ID .)
    JOIN            reduce using rule 79 (identifier -> ID .)
    GROUP_BY        reduce using rule 79 (identifier -> ID .)
    HAVING          reduce using rule 79 (identifier -> ID .)
    ORDER_BY        reduce using rule 79 (identifier -> ID .)
    AND             reduce using rule 79 (identifier -> ID .)
    OR              reduce using rule 79 (identifier -> ID .)
    ON              reduce using rule 79 (identifier -> ID .)
    PUNTO           shift and go to state 33


state 17

    (60) update_statement -> UPDATE identifier . SET assignment_list opt_where_clause PUNTO_Y_COMA

    SET             shift and go to state 34


state 18

    (64) delete_statement -> DELETE_FROM identifier . opt_where_clause PUNTO_Y_COMA
    (29) opt_where_clause -> . WHERE condition
    (30) opt_where_clause -> . empty
    (81) empty -> .

    WHERE           shift and go to state 36
    PUNTO_Y_COMA    reduce using rule 81 (empty -> .)

    opt_where_clause               shift and go to state 35
    empty                          shift and go to state 37

state 19

    (65) alter_table_statement -> ALTER_TABLE identifier . ADD_COLUMN column_definition PUNTO_Y_COMA
    (66) alter_table_statement -> ALTER_TABLE identifier . DROP_COLUMN identifier PUNTO_Y_COMA

    ADD_COLUMN      shift and go to state 38
    DROP_COLUMN     shift and go to state 39


state 20

    (6) select_statement -> SELECT opt_distinct select_list . FROM table_list opt_join_clause opt_where_clause opt_group_by_clause opt_having_clause opt_order_by_clause PUNTO_Y_COMA

    FROM            shift and go to state 40


state 21

    (11) select_list -> ASTERISCO .

    FROM            reduce using rule 11 (select_list -> ASTERISCO .)


state 22

    (12) select_list -> select_items .
    (13) select_items -> select_items . COMA select_item

    FROM            reduce using rule 12 (select_list -> select_items .)
    COMA            shift and go to state 41


state 23

    (14) select_items -> select_item .

    COMA            reduce using rule 14 (select_items -> select_item .)
    FROM            reduce using rule 14 (select_items -> select_item .)


state 24

    (15) select_item -> DISTINCT . identifier
    (79) identifier -> . ID
    (80) identifier -> . ID PUNTO ID

    ID              shift and go to state 16

    identifier                     shift and go to state 42

state 25

    (16) select_item -> identifier .

    COMA            reduce using rule 16 (select_item -> identifier .)
    FROM            reduce using rule 16 (select_item -> identifier .)


state 26

    (17) select_item -> function_call .

    COMA            reduce using rule 17 (select_item -> function_call .)
    FROM            reduce using rule 17 (select_item -> function_call .)


state 27

    (18) function_call -> COUNT . PARENIZQ operand PARENDER

    PARENIZQ        shift and go to state 43


state 28

    (19) function_call -> SUM . PARENIZQ operand PARENDER

    PARENIZQ        shift and go to state 44


state 29

    (20) function_call -> AVG . PARENIZQ operand PARENDER

    PARENIZQ        shift and go to state 45


state 30

    (21) function_call -> MIN . PARENIZQ operand PARENDER

    PARENIZQ        shift and go to state 46


state 31

    (22) function_call -> MAX . PARENIZQ operand PARENDER

    PARENIZQ        shift and go to state 47


state 32

    (57) insert_statement -> INSERT_INTO identifier PARENIZQ . column_list PARENDER VALUES PARENIZQ value_list PARENDER PUNTO_Y_COMA
    (23) column_list -> . identifier
    (24) column_list -> . identifier COMA column_list
    (79) identifier -> . ID
    (80) identifier -> . ID PUNTO ID

    ID              shift and go to state 16

    identifier                     shift and go to state 48
    column_list                    shift and go to state 49

state 33

    (80) identifier -> ID PUNTO . ID

    ID              shift and go to state 50


state 34

    (60) update_statement -> UPDATE identifier SET . assignment_list opt_where_clause PUNTO_Y_COMA
    (61) assignment_list -> . assignment
    (62) assignment_list -> . assignment COMA assignment_list
    (63) assignment -> . identifier IGUAL value
    (79) identifier -> . ID
    (80) identifier -> . ID PUNTO ID

    ID              shift and go to state 16

    identifier                     shift and go to state 51
    assignment_list                shift and go to state 52
    assignment                     shift and go to state 53

state 35

    (64) delete_statement -> DELETE_FROM identifier opt_where_clause . PUNTO_Y_COMA

    PUNTO_Y_COMA    shift and go to state 54


state 36

    (29) opt_where_clause -> WHERE . condition
    (35) condition -> . expression
    (36) condition -> . condition AND condition
    (37) condition -> . condition OR condition
    (44) expression -> . operand comparador operand
    (45) expression -> . operand BETWEEN operand AND operand
    (38) operand -> . value
    (39) operand -> . aggregate_function
    (40) value -> . NUM
    (41) value -> . STRING
    (42) value -> . identifier
    (43) value -> . ASTERISCO
    (46) aggregate_function -> . COUNT PARENIZQ operand PARENDER
    (47) aggregate_function -> . SUM PARENIZQ operand PARENDER
    (48) aggregate_function -> . AVG PARENIZQ operand PARENDER
    (49) aggregate_function -> . MIN PARENIZQ operand PARENDER
    (50) aggregate_function -> . MAX PARENIZQ operand PARENDER
    (79) identifier -> . ID
    (80) identifier -> . ID PUNTO ID

    NUM             shift and go to state 60
    STRING          shift and go to state 61
    ASTERISCO       shift and go to state 63
    COUNT           shift and go to state 64
    SUM             shift and go to state 65
    AVG             shift and go to state 66
    MIN             shift and go to state 67
    MAX             shift and go to state 68
    ID              shift and go to state 16

    condition                      shift and go to state 55
    expression                     shift and go to state 56
    operand                        shift and go to state 57
    value                          shift and go to state 58
    aggregate_function             shift and go to state 59
    identifier                     shift and go to state 62

state 37

    (30) opt_where_clause -> empty .

    PUNTO_Y_COMA    reduce using rule 30 (opt_where_clause -> empty .)
    GROUP_BY        reduce using rule 30 (opt_where_clause -> empty .)
    HAVING          reduce using rule 30 (opt_where_clause -> empty .)
    ORDER_BY        reduce using rule 30 (opt_where_clause -> empty .)


state 38

    (65) alter_table_statement -> ALTER_TABLE identifier ADD_COLUMN . column_definition PUNTO_Y_COMA
    (70) column_definition -> . identifier data_type column_constraints
    (79) identifier -> . ID
    (80) identifier -> . ID PUNTO ID

    ID              shift and go to state 16

    identifier                     shift and go to state 69
    column_definition              shift and go to state 70

state 39

    (66) alter_table_statement -> ALTER_TABLE identifier DROP_COLUMN . identifier PUNTO_Y_COMA
    (79) identifier -> . ID
    (80) identifier -> . ID PUNTO ID

    ID              shift and go to state 16

    identifier                     shift and go to state 71

state 40

    (6) select_statement -> SELECT opt_distinct select_list FROM . table_list opt_join_clause opt_where_clause opt_group_by_clause opt_having_clause opt_order_by_clause PUNTO_Y_COMA
    (25) table_list -> . identifier
    (26) table_list -> . identifier COMA table_list
    (79) identifier -> . ID
    (80) identifier -> . ID PUNTO ID

    ID              shift and go to state 16

    table_list                     shift and go to state 72
    identifier                     shift and go to state 73

state 41

    (13) select_items -> select_items COMA . select_item
    (15) select_item -> . DISTINCT identifier
    (16) select_item -> . identifier
    (17) select_item -> . function_call
    (79) identifier -> . ID
    (80) identifier -> . ID PUNTO ID
    (18) function_call -> . COUNT PARENIZQ operand PARENDER
    (19) function_call -> . SUM PARENIZQ operand PARENDER
    (20) function_call -> . AVG PARENIZQ operand PARENDER
    (21) function_call -> . MIN PARENIZQ operand PARENDER
    (22) function_call -> . MAX PARENIZQ operand PARENDER

    DISTINCT        shift and go to state 24
    ID              shift and go to state 16
    COUNT           shift and go to state 27
    SUM             shift and go to state 28
    AVG             shift and go to state 29
    MIN             shift and go to state 30
    MAX             shift and go to state 31

    select_item                    shift and go to state 74
    identifier                     shift and go to state 25
    function_call                  shift and go to state 26

state 42

    (15) select_item -> DISTINCT identifier .

    COMA            reduce using rule 15 (select_item -> DISTINCT identifier .)
    FROM            reduce using rule 15 (select_item -> DISTINCT identifier .)


state 43
